force-app/main/default/objects/IncidentRelatedItem/fields/Suggested_Communication_Tone__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Communication_Tone__c</fullName>
    <label>Suggested Communication Tone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Formal</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>