force-app/main/default/objects/IncidentRelatedItem/fields/Suggested_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Compensation__c</fullName>
    <label>Suggested Compensation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free Item</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Next 5x free delivery</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>